[gd_scene load_steps=6 format=3 uid="uid://j38wnr2kxoaw"]

[ext_resource type="Script" uid="uid://imkij5f1044l" path="res://Scripts/lose_menu.gd" id="1_0jnk0"]
[ext_resource type="AudioStream" uid="uid://d25xcni23o2oc" path="res://Assets/Sounds/SongLose.wav" id="2_b3kgp"]

[sub_resource type="LabelSettings" id="LabelSettings_y2c35"]
font_size = 92

[sub_resource type="InputEventAction" id="InputEventAction_b3kgp"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_atr7c"]
events = [SubResource("InputEventAction_b3kgp")]

[node name="LoseMenu" type="ColorRect"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.627, 0, 0.314, 0.779)
script = ExtResource("1_0jnk0")
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(1280, 756)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "YOU DIED"
label_settings = SubResource("LabelSettings_y2c35")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ReloadButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 96
action_mode = 0
shortcut = SubResource("Shortcut_atr7c")
text = "RELOAD"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 96
action_mode = 0
text = "QUIT"

[node name="SongLose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_b3kgp")

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
